--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 240px;
   min-width: 240px;
-  height: 100dvh;
+  height: 100%;
   background: var(--sidebar);
   border-right: 1px solid var(--sidebar-border);
   position: sticky;
